# rowing_boat

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: boat.py
app/db/: database.py
app/schemas/: boat.py  passengers.py
tests/: conftest.py  test_main.py  testdata.py
