[tool.poetry]
name = "rowing-boat"
version = "0.1.0"
description = ""
authors = ["Pavel Drovnin <pavel98rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.115.8"
httpx = "^0.28.1"
sqlmodel = "^0.0.22"
uvicorn = "^0.34.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
